[DEV] fix view on mobile

--- a/src/app/pages/main/main.component.less
+++ b/src/app/pages/main/main.component.less
@@ -132,16 +132,16 @@ img {
         height: 200px;
         width: 400px;
     }
+
+    .movie {
+        display: flex;
+        justify-content: center;
+    }
 }
 
 @media only screen and (max-width: 412px) {
     .hero-text-title {
         display: none;
-    }
-
-    .branch-name {
-        // font-size: 12px;
-        // margin-bottom: ;
     }
 
     .text-block {
